[package]
name = "hibiki"
version = "0.1.0"
edition = "2021"

[dependencies]
llama-cpp-2 = { git = "https://github.com/xutianyi1999/llama-cpp-rs.git", default-features = false, branch = "update-llama-cpp-2025-01-02"}
hf-hub = { version = "0.4" }
anyhow = "1"
serde_json = "1"

[features]
#cuda = ["llama-cpp-2/cuda"]